--- a/app/src/main/res/menu/note_list.xml
+++ b/app/src/main/res/menu/note_list.xml
@@ -15,18 +15,23 @@
      limitations under the License.
 -->
 
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
+<menu xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/create_new_note_icon"
         android:icon="@drawable/create_bt"
         android:title="Create"
-        app:showAsAction="always"/>
+        android:orderInCategory="0"
+        android:showAsAction="always"
+        tools:ignore="AppCompatResource" />
     <item
         android:id="@+id/note_list_moreaction"
         android:title="More"
+        android:orderInCategory="1"
         android:icon="@drawable/menu_icon"
-        app:showAsAction="always">
+        android:showAsAction="always"
+        tools:ignore="AppCompatResource">
         <menu>
             <item
                 android:id="@+id/menu_new_folder"
