Note_list change

--- a/app/src/main/res/menu/note_list.xml
+++ b/app/src/main/res/menu/note_list.xml
@@ -19,7 +19,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/create_new_note_icon"
+        android:id="@+id/btn_create"
         android:icon="@drawable/create_bt"
         android:title="Create"
         android:orderInCategory="0"
