--- a/app/src/main/res/menu/note_list.xml
+++ b/app/src/main/res/menu/note_list.xml
@@ -19,9 +19,16 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
+        android:id="@+id/about"
+        android:title="@string/about_us"
+        android:icon="@drawable/about"
+        android:orderInCategory="0"
+        android:showAsAction="always"
+        tools:ignore="AppCompatResource"/>
+    <item
         android:id="@+id/note_list_moreaction"
         android:title="More"
-        android:orderInCategory="0"
+        android:orderInCategory="1"
         android:icon="@drawable/menu_icon"
         android:showAsAction="always"
         tools:ignore="AppCompatResource">
