--- a/app/src/main/res/menu/note_list.xml
+++ b/app/src/main/res/menu/note_list.xml
@@ -28,7 +28,7 @@
     <item
         android:id="@+id/sort"
         android:title="@string/sortway"
-        android:icon="@drawable/sorticon"
+        android:icon="@drawable/sort"
         android:orderInCategory="0"
         android:showAsAction="always"
         tools:ignore="AppCompatResource">
